<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.marci.eventview.EventView"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_event_view">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_date"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="180dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_location"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="295dp"
        android:layout_height="267dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_notes"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="180dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_calendar"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="180dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_hour"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@android:drawable/ic_menu_agenda" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@android:drawable/ic_menu_mylocation" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="26dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_month" />

    <TextView
        android:id="@+id/textview10"
        android:layout_width="180dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="352dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
</android.support.constraint.ConstraintLayout>
